--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: 1.0
 author: Neast
 website: https://www.spigotmc.org/resources/xpbottle-%E2%9C%A8-itemsadder-%E2%AD%90-optimize-xp-management-with-enhanced-item-integration.117444/
 main: org.neast.bottlexp.Bottlexp
-api-version: [1.8, 1.21]
+api-version: 1.19
 
 commands:
   xpbottle:
